--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,7 +23,14 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
+
+    - name: lint
+    - run: |
+        cargo fmt -- --check
+        cargo clippy -- -D warnings
+
+    - name: tests
       run: cargo test --verbose
+
+    - name: build
+      run: cargo build --verbose
