--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,7 +25,7 @@ jobs:
     - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
 
     - name: lint
-    - run: |
+      run: |
         cargo fmt -- --check
         cargo clippy -- -D warnings
 
