--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 chrono = "0.4.22"
 clap = { version = "4.0.18", features = ["derive"] }
 lazy_static = "1.4.0"
+polars = { version = "0.25.1", features = ["lazy"] }
 regex = "1.6.0"
 reqwest = { version = "0.11.12", features = ["json", "blocking"] }
 scraper = "0.13.0"
