organized code into binary crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.22"
 clap = { version = "4.0.18", features = ["derive"] }
+color-eyre = "0.6.2"
 lazy_static = "1.4.0"
 polars = { version = "0.25.1", features = ["lazy"] }
 regex = "1.6.0"
