--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@
 
 # most CSVs are data that shouldn't be pushed
 *.csv
-!valid_sets.csv # used to avoid sending requests to blank pages
+!set_list.csv # used to avoid sending requests to blank pages
